--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "expo": "^48.0.17",
     "expo-linear-gradient": "~12.3.0",
     "expo-status-bar": "~1.6.0",
+    "firebase": "^10.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.4",
+    "react-native-gesture-handler": "~2.9.0",
+    "react-native-safe-area-context": "4.5.0",
     "react-native-vector-icons": "^10.0.0",
     "react-native-web": "~0.19.6"
   },
